styles/style_button.css
.button_square {
    cursor: pointer;
    display: inline-flex;
    align-items: center;
    border: none;
    border-radius: 4px;
    background-color: rgb(220, 220, 220);
    color: black;
    font-family: 'Spartan', sans-serif;
    font-weight: bold;
    font-size: 20px;
    padding-top: 12px;
    padding-bottom: 12px;
    padding-right: 20px;
    padding-left: 20px;
    text-align: center;
    transition: 0.2s ease;
    box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.05);
    background-color: rgb(248, 248, 248);
} .button_square:hover {
    background-color: rgb(227, 227, 227);
}

.button_icon {
    cursor: pointer;
    padding: 0;
    margin-left: 8px;
    margin-right: 8px;
    background: none;
    border: none;
    transition: 0.2s ease;
} .button_icon:hover {
    opacity: 0.5;
}

.button_text {
    cursor: pointer;
    border: none;
    background: none;
    color: rgb(132, 132, 132);
    font-family: 'Spartan', sans-serif;
    font-size: 20px;
    text-wrap: nowrap;
    padding: 5px;
    margin-top: 4px;
    transition: 0.2s ease;
} .button_text:hover {
    color: rgb(23, 23, 23);
}

.button_game {
    cursor: pointer;
    color: black;
    max-width: 1256px;
    padding: 20px;
    transition: 0.2s ease;
    border-radius: 5px;
    border: none;
    box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.075);
    background-color: rgb(248, 248, 248);
} .button_game:hover {
    background-color: rgb(227, 227, 227);
}

.button_game_small {
    cursor: pointer;
    zoom: 80%;
    max-width: 1256px;
    width: 100%;    /* so that the mobile button fills the entire space */
    color: black;
    padding: 20px;
    padding-left: 24px;
    padding-right: 24px;
    transition: 0.2s ease;
    border-radius: 5px;
    border: none;
    box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.05);
    background-color: rgb(248, 248, 248);
} .button_game_small:hover {
    background-color: rgb(227, 227, 227);
}

@media only screen and (min-width: 768px) {
    .button_game_small {
        width: auto;
    }
}

